# cse-589-project

./: .gitattributes  .gitignore  README.md  evaluate_local.py  make-colab-upload.sh  pyproject.toml  requirements.txt
auto-vtt/: .gitignore  MANIFEST.in  evaluate_local.py  evaluate_remote.py  evaluate_stt_size.py  pyproject.toml
auto-vtt/src/auto_vtt/audio_processing/: __init__.py
auto-vtt/src/auto_vtt/inferencing/: action_classifier.py
auto-vtt/src/auto_vtt/speech_to_text/: __init__.py
auto-vtt/src/auto_vtt/streaming/: __init__.py  client.py  server.py
auto-vtt/test/: __init__.py  test_audio_processing.py  test_audio_transcription.py  test_inference.py
network-sim/: pyproject.toml
network-sim/data/: in-car-latency.csv
network-sim/src/: arma_latency_provider.py  data_latency_provider.py  main.py  topology.py
network-sim/src/network_sim/: dataset.py
network-sim/src/network_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
network-sim/src/network_sim/latency_provider/: __init__.py  arma_latency_provider.py  data_latency_provider.py
network-sim/src/network_sim/test_runner/: full_tester.py  model_size_tester.py  run_client.py  run_server.py
network-sim/src/network_sim/topology/: __init__.py
network-sim/src/test_runner/: __init__.py
network-sim/topologies/: basic_topology.py
src/auto_vtt/audio_processing/: README.md  __init__.py
src/auto_vtt/inferencing/: action_classifier.py
src/auto_vtt/speech_to_text/: __init__.py
src/inferencing/: README.md
test/: __init__.py  test_audio_processing.py  test_audio_transcription.py  test_inference.py
