[project]
name = "cse-589-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.56.2",
    "openai-whisper>=20240930",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.1",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]
