[project]
name = "network-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.2.0",
    "fire>=0.7.0",
    "matplotlib>=3.9.3",
    "mininet>=2.3.0.dev6",
    "numpy>=2.1.3",
    "pip>=24.3.1",
    "ruff>=0.8.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
